Server/esp_server/build/log/idf_py_stderr_output_51148
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_read':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:305:23: error: 'MAX_FILENAME_LEN' undeclared (first use in this function)
  305 |         char filename[MAX_FILENAME_LEN];
      |                       ^~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:305:23: note: each undeclared identifier is reported only once for each function it appears in
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:316:14: warning: unused variable 'filepath' [-Wunused-variable]
  316 |         char filepath[MAX_FILENAME_LEN + 8]; // Adjust the buffer size as needed
      |              ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:305:14: warning: unused variable 'filename' [-Wunused-variable]
  305 |         char filename[MAX_FILENAME_LEN];
      |              ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:95:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   95 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:42:15: warning: 'write_buffer_index' defined but not used [-Wunused-variable]
   42 | static size_t write_buffer_index = 0;  // Current position in the write buffer
      |               ^~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:41:16: warning: 'write_buffer' defined but not used [-Wunused-variable]
   41 | static uint8_t write_buffer[MAX_FILE_SIZE];  // Buffer for storing file data
      |                ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
